@@ -78,4 +78,32 @@ else
         done
 fi
 
+am33_files="ChangeLog mn10300_sim.h"
+if ( echo $* | grep keep\-am33 > /dev/null ) ; then
+        for i in $am33_files ; do
+                if test ! -d $i && (grep sanitize-am33 $i > /dev/null) ; then
+                        if [ -n "${verbose}" ] ; then
+                                echo Keeping am33 stuff in $i
+                        fi
+                fi
+        done
+else
+        for i in $am33_files ; do
+                if test ! -d $i && (grep sanitize-am33 $i > /dev/null) ; then
+                        if [ -n "${verbose}" ] ; then
+                                echo Removing traces of \"am33\" from $i...
+                        fi
+                        cp $i new
+                        sed '/start\-sanitize\-am33/,/end-\sanitize\-am33/d' < $i > new
+                        if [ -n "${safe}" -a ! -f .Recover/$i ] ; then
+                                if [ -n "${verbose}" ] ; then
+                                        echo Caching $i in .Recover...
+                                fi
+                                mv $i .Recover
+                        fi
+                        mv new $i
+                fi
+        done
+fi
+
 # End of file.
